0.13.x/_sources/api/skimage.segmentation.rst.txt
.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`segmentation`
===========================
.. automodule:: skimage.segmentation

.. currentmodule:: skimage.segmentation
.. autosummary::

   skimage.segmentation.active_contour
   skimage.segmentation.clear_border
   skimage.segmentation.felzenszwalb
   skimage.segmentation.find_boundaries
   skimage.segmentation.join_segmentations
   skimage.segmentation.mark_boundaries
   skimage.segmentation.quickshift
   skimage.segmentation.random_walker
   skimage.segmentation.relabel_from_one
   skimage.segmentation.relabel_sequential
   skimage.segmentation.slic
   skimage.segmentation.watershed


    skimage.segmentation.active_contour_model
    skimage.segmentation.boundaries
    skimage.segmentation.random_walker_segmentation
    skimage.segmentation.slic_superpixels

active_contour
--------------

.. autofunction:: skimage.segmentation.active_contour

clear_border
------------

.. autofunction:: skimage.segmentation.clear_border

felzenszwalb
------------

.. autofunction:: skimage.segmentation.felzenszwalb

find_boundaries
---------------

.. autofunction:: skimage.segmentation.find_boundaries

join_segmentations
------------------

.. autofunction:: skimage.segmentation.join_segmentations

mark_boundaries
---------------

.. autofunction:: skimage.segmentation.mark_boundaries

quickshift
----------

.. autofunction:: skimage.segmentation.quickshift

random_walker
-------------

.. autofunction:: skimage.segmentation.random_walker

relabel_from_one
----------------

.. autofunction:: skimage.segmentation.relabel_from_one

relabel_sequential
------------------

.. autofunction:: skimage.segmentation.relabel_sequential

slic
----

.. autofunction:: skimage.segmentation.slic

watershed
---------

.. autofunction:: skimage.segmentation.watershed

