0.14.x/_sources/api/skimage.segmentation.rst.txt
.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`segmentation`
===========================
.. automodule:: skimage.segmentation

.. currentmodule:: skimage.segmentation
.. autosummary::

   skimage.segmentation.random_walker
   skimage.segmentation.active_contour
   skimage.segmentation.felzenszwalb
   skimage.segmentation.slic
   skimage.segmentation.quickshift
   skimage.segmentation.find_boundaries
   skimage.segmentation.mark_boundaries
   skimage.segmentation.clear_border
   skimage.segmentation.join_segmentations
   skimage.segmentation.relabel_from_one
   skimage.segmentation.relabel_sequential
   skimage.segmentation.watershed
   skimage.segmentation.chan_vese
   skimage.segmentation.morphological_geodesic_active_contour
   skimage.segmentation.morphological_chan_vese
   skimage.segmentation.inverse_gaussian_gradient
   skimage.segmentation.circle_level_set
   skimage.segmentation.checkerboard_level_set



random_walker
-------------

.. autofunction:: skimage.segmentation.random_walker


.. include:: skimage.segmentation.random_walker.examples

active_contour
--------------

.. autofunction:: skimage.segmentation.active_contour


.. include:: skimage.segmentation.active_contour.examples

felzenszwalb
------------

.. autofunction:: skimage.segmentation.felzenszwalb


.. include:: skimage.segmentation.felzenszwalb.examples

slic
----

.. autofunction:: skimage.segmentation.slic


.. include:: skimage.segmentation.slic.examples

quickshift
----------

.. autofunction:: skimage.segmentation.quickshift


.. include:: skimage.segmentation.quickshift.examples

find_boundaries
---------------

.. autofunction:: skimage.segmentation.find_boundaries


.. include:: skimage.segmentation.find_boundaries.examples

mark_boundaries
---------------

.. autofunction:: skimage.segmentation.mark_boundaries


.. include:: skimage.segmentation.mark_boundaries.examples

clear_border
------------

.. autofunction:: skimage.segmentation.clear_border


.. include:: skimage.segmentation.clear_border.examples

join_segmentations
------------------

.. autofunction:: skimage.segmentation.join_segmentations


.. include:: skimage.segmentation.join_segmentations.examples

relabel_from_one
----------------

.. autofunction:: skimage.segmentation.relabel_from_one


.. include:: skimage.segmentation.relabel_from_one.examples

relabel_sequential
------------------

.. autofunction:: skimage.segmentation.relabel_sequential


.. include:: skimage.segmentation.relabel_sequential.examples

watershed
---------

.. autofunction:: skimage.segmentation.watershed


.. include:: skimage.segmentation.watershed.examples

chan_vese
---------

.. autofunction:: skimage.segmentation.chan_vese


.. include:: skimage.segmentation.chan_vese.examples

morphological_geodesic_active_contour
-------------------------------------

.. autofunction:: skimage.segmentation.morphological_geodesic_active_contour


.. include:: skimage.segmentation.morphological_geodesic_active_contour.examples

morphological_chan_vese
-----------------------

.. autofunction:: skimage.segmentation.morphological_chan_vese


.. include:: skimage.segmentation.morphological_chan_vese.examples

inverse_gaussian_gradient
-------------------------

.. autofunction:: skimage.segmentation.inverse_gaussian_gradient


.. include:: skimage.segmentation.inverse_gaussian_gradient.examples

circle_level_set
----------------

.. autofunction:: skimage.segmentation.circle_level_set


.. include:: skimage.segmentation.circle_level_set.examples

checkerboard_level_set
----------------------

.. autofunction:: skimage.segmentation.checkerboard_level_set


.. include:: skimage.segmentation.checkerboard_level_set.examples

